--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,18 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title:  # the website title (if blank, full name will be used instead)
-first_name: Jiayao 
-middle_name: 
-last_name: Peng
-email: jiayao.peng01@gmail.com
+title: blank # the website title (if blank, full name will be used instead)
+first_name: You
+middle_name: R.
+last_name: Name
+email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Hi, my name is Jiayao. I graduated with a bachelor degree of linguistics and master of applied data science. At the moment
-  I'm working as a Data Scientist and I have strong interest in NLP.
+  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-  
-"Muad'Dib learned rapidly because his first training was in how to learn. 
-And the first lesson of all was the basic trust that he could learn. 
-It's shocking to find how many people do not believe they can learn, 
-and how many more believe learning to be difficult." ~Dune”
-keywords: NLP, LLM, Travel  # add your own keywords or leave empty
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
